k8s/configs/spacex-service.yml
apiVersion: v1
kind: Service
metadata:
  # name: api-node-port-service
  name: spacex-service
spec:
  # type: NodePort
  type: NodePort
  selector:
    app: spaceX
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
